--- a/Email Marketing.html
+++ b/Email Marketing.html
@@ -10,6 +10,12 @@
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
+     <link href="img/android-chrome-192x192.png" rel="icon">
+     <link href="img/android-chrome-512x512.png" rel="icon">
+     <link href="img/apple-touch-icon.png" rel="icon">
+     <link href="img/favicon-16x16.png" rel="icon">
+     <link href="img/favicon-32x32.png" rel="icon">
+     <link href="img/site.webmanifest" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -94,14 +100,10 @@
     <!-- CENTER LINKS -->
     <div class="navbar-nav mx-auto" style="padding:0px 30px 0px 30px;"> 
 
-        <a href="index.html" class="nav-item nav-link">Home</a>
+        <a href="index.html" class="nav-item nav-link text-dark ">Home</a>
 
-        <div class="nav-item dropdown">
-            <a href="service.html"
-         class="nav-link dropdown-toggle"
-        onclick="window.location.href='service.html'">
-           Services
-        </a>
+       <div class="nav-item dropdown">
+             <a href="service.html" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Services</a>
             <div class="dropdown-menu m-0 p-0">
                 <a href="service.html" class="dropdown-item py-2">ALL Services</a>
                 <a href="SEO Service.html" class="dropdown-item py-2">Search Engine Optimization</a>
@@ -116,6 +118,7 @@
                 <!-- <a href="conversion rate optimization.html" class="dropdown-item py-2">Conversion Rate Optimization</a> -->
             </div>
         </div>
+
         <a href="project.html" class="nav-item nav-link">Projects</a>
 
         <!-- Pages Dropdown -->
