--- a/Google ads.html
+++ b/Google ads.html
@@ -10,6 +10,12 @@
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
+     <link href="img/android-chrome-192x192.png" rel="icon">
+     <link href="img/android-chrome-512x512.png" rel="icon">
+     <link href="img/apple-touch-icon.png" rel="icon">
+     <link href="img/favicon-16x16.png" rel="icon">
+     <link href="img/favicon-32x32.png" rel="icon">
+     <link href="img/site.webmanifest" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -96,13 +102,10 @@
 
         <a href="index.html" class="nav-item nav-link">Home</a>
 
-        <div class="nav-item dropdown">
-            <a href="service.html"
-         class="nav-link dropdown-toggle"
-        onclick="window.location.href='service.html'">
-           Services
-        </a>
+       <div class="nav-item dropdown">
+             <a href="service.html" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Services</a>
             <div class="dropdown-menu m-0 p-0">
+                <a href="service.html" class="dropdown-item py-2">ALL Services</a>
                 <a href="SEO Service.html" class="dropdown-item py-2">Search Engine Optimization</a>
                 <a href="Contant Marketing Service.html" class="dropdown-item py-2">Content Marketing Services</a>
                 <a href="Website Design & development.html" class="dropdown-item py-2">Web Design & Development</a>
